--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "csv_file_reader",
   "version": "1.0.0",
-  "description": "An App which reads csv file and show the data in the tabular form ",
+  "description": "An App which reads csv file  ",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vivek Raj",
+  "author": "Sonu kumar",
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^3.0.0",
